使用 Colaboratory 创建

--- a/tensorflow2_0.ipynb
+++ b/tensorflow2_0.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow2.0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0DAq+1jDFFr1sUz+FQ9cL",
+      "authorship_tag": "ABX9TyPPD4rDwReQr7/iCPtGHb7c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,6 +194,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nVXrRoDFOwB0"
+      },
+      "source": [
+        "sasasas"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
