--- a/tensorflow2_0.ipynb
+++ b/tensorflow2_0.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow2.0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPD4rDwReQr7/iCPtGHb7c",
+      "authorship_tag": "ABX9TyO7hRVWy7uP8zczybpvYIeY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "y_grad=tape.gradient(y,x)\n",
         "print(y,y_grad)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
         "\n",
         "print(w_grad,b_grad)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "\n",
         "print(a,b)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "    def __init__(self):\n",
         "        super().__init__()\n",
         "        self.dense = tf.keras.layers.Dense(\n",
-        "            units=1,#层数为1\n",
+        "            units=1,#输出张量的维度；\n",
         "            activation=None,#激活函数\n",
         "            kernel_initializer=tf.zeros_initializer(),#初始化权重\n",
         "            bias_initializer=tf.zeros_initializer()#初始化偏置\n",
@@ -181,7 +181,7 @@
         "  optimizer.apply_gradients(grads_and_vars=zip(grads, model.variables))\n",
         "print(model.variables)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,34 @@
         "id": "nVXrRoDFOwB0"
       },
       "source": [
-        "sasasas"
+        "class MNISTLoader():\n",
+        "    def __init__(self):\n",
+        "        mnist = tf.keras.datasets.mnist\n",
+        "        (self.train_data, self.train_label), (self.test_data, self.test_label) = mnist.load_data()\n",
+        "        # MNIST中的图像默认为uint8（0-255的数字）。以下代码将其归一化到0-1之间的浮点数，并在最后增加一维作为颜色通道\n",
+        "        self.train_data = np.expand_dims(self.train_data.astype(np.float32) / 255.0, axis=-1)      # [60000, 28, 28, 1]\n",
+        "        self.test_data = np.expand_dims(self.test_data.astype(np.float32) / 255.0, axis=-1)        # [10000, 28, 28, 1]\n",
+        "        self.train_label = self.train_label.astype(np.int32)    # [60000]\n",
+        "        self.test_label = self.test_label.astype(np.int32)      # [10000]\n",
+        "        self.num_train_data, self.num_test_data = self.train_data.shape[0], self.test_data.shape[0]\n",
+        "\n",
+        "    def get_batch(self, batch_size):\n",
+        "        # 从数据集中随机取出batch_size个元素并返回\n",
+        "        index = np.random.randint(0, self.num_train_data, batch_size)\n",
+        "        return self.train_data[index, :], self.train_label[index]\n",
+        "class MLP(tf.keras.Model):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.flatten = tf.keras.layers.Flatten()    # Flatten层将除第一维（batch_size）以外的维度展平\n",
+        "        self.dense1 = tf.keras.layers.Dense(units=100, activation=tf.nn.relu)\n",
+        "        self.dense2 = tf.keras.layers.Dense(units=10)\n",
+        "\n",
+        "    def call(self, inputs):         # [batch_size, 28, 28, 1]\n",
+        "        x = self.flatten(inputs)    # [batch_size, 784]\n",
+        "        x = self.dense1(x)          # [batch_size, 100]\n",
+        "        x = self.dense2(x)          # [batch_size, 10]\n",
+        "        output = tf.nn.softmax(x)\n",
+        "        return output"
       ],
       "execution_count": null,
       "outputs": []
