使用 Colaboratory 创建

--- a/tensorflow2_0.ipynb
+++ b/tensorflow2_0.ipynb
@@ -6,7 +6,7 @@
       "name": "tensorflow2.0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7hRVWy7uP8zczybpvYIeY",
+      "authorship_tag": "ABX9TyM713gC5BC6LmS0BmrjbJQA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,6 +201,9 @@
         "id": "nVXrRoDFOwB0"
       },
       "source": [
+        "#cnn 手写数字\n",
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
         "class MNISTLoader():\n",
         "    def __init__(self):\n",
         "        mnist = tf.keras.datasets.mnist\n",
@@ -228,10 +231,58 @@
         "        x = self.dense1(x)          # [batch_size, 100]\n",
         "        x = self.dense2(x)          # [batch_size, 10]\n",
         "        output = tf.nn.softmax(x)\n",
-        "        return output"
+        "        return output\n",
+        "num_epochs = 5\n",
+        "batch_size = 50\n",
+        "learning_rate = 0.001\n",
+        "model = MLP()\n",
+        "data_loader = MNISTLoader()\n",
+        "optimizer = tf.keras.optimizers.Adam(learning_rate=learning_rate)\n",
+        "num_batches = int(data_loader.num_train_data // batch_size * num_epochs)\n",
+        "for batch_index in range(num_batches):\n",
+        "    X, y = data_loader.get_batch(batch_size)\n",
+        "    with tf.GradientTape() as tape:\n",
+        "        y_pred = model(X)\n",
+        "        loss = tf.keras.losses.sparse_categorical_crossentropy(y_true=y, y_pred=y_pred)\n",
+        "        loss = tf.reduce_mean(loss)\n",
+        "        print(\"batch %d: loss %f\" % (batch_index, loss.numpy()))\n",
+        "    grads = tape.gradient(loss, model.variables)\n",
+        "    optimizer.apply_gradients(grads_and_vars=zip(grads, model.variables))\n",
+        "loss = tf.keras.losses.sparse_categorical_crossentropy(y_true=y, y_pred=y_pred)\n",
+        "sparse_categorical_accuracy = tf.keras.metrics.SparseCategoricalAccuracy()\n",
+        "   "
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "smUPw_mo8V9p",
+        "outputId": "041a9e09-b3e2-46e0-fa39-df04fbef2706"
+      },
+      "source": [
+        "sparse_categorical_accuracy = tf.keras.metrics.SparseCategoricalAccuracy()\n",
+        "num_batches = int(data_loader.num_test_data // batch_size)\n",
+        "for batch_index in range(num_batches):\n",
+        "    start_index, end_index = batch_index * batch_size, (batch_index + 1) * batch_size\n",
+        "    y_pred = model.predict(data_loader.test_data[start_index: end_index])\n",
+        "    sparse_categorical_accuracy.update_state(y_true=data_loader.test_label[start_index: end_index], y_pred=y_pred)\n",
+        "print(\"test accuracy: %f\" % sparse_categorical_accuracy.result())"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test accuracy: 0.974300\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
